<resources>
    <string name="app_name">Ikouka</string>
    <!-- main_menu -->
    <string name="signout">ログアウト</string>
    <string name="account">アカウント</string>
    <string name="newgroup">グループ作成</string>
    <string name="allgroups">全てグループ</string>

    <!-- common -->
    <string name="labelInputEmail">メール</string>
    <string name="labelInputPassword">パスワード</string>

    <!-- activity_home -->
    <string name="btnToLogin">アプリにログイン</string>
    <string name="btnToRegister">アカウント新規作成</string>
    <string name="homeTitle">ikouka！</string>

    <!-- activity_login -->
    <string name="labelLogin">ログイン</string>
    <string name="btnLogin">ログイン</string>
    <string name="btnGoRegister">登録</string>

    <!-- activity_register -->
    <string name="labelRegister">アカウント新規登録</string>
    <string name="labelInputUsername">ユーザ名</string>
    <string name="labelInputPasswordConfirm">パスワード確認</string>
    <string name="btnRegister">登録</string>

    <string name="title_activity_main">MainActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- main_activity -->
    <!-- Tabs Title -->
    <string name="tabtitle_groups">グループ</string>
    <string name="tabtitle_request">リクエスト</string>

    <!-- GroupActivity -->
    <string name="ownerMenu">管理者メニュー</string>
    <string name="menuMembers">メンバー</string>
    <string name="menuVote">投票・アンケート</string>
    <string name="menuChat">チャット</string>
    <string name="menuTasks">タスク</string>

    <!-- Create Group Activity -->
    <string name="createGroup">グループ作成</string>
    <string name="groupCreateTitleLabel">グループ名</string>
    <string name="groupCreateDescriptionLabel">グループ概要</string>
    <string name="groupCreateCreateButton">グループ作成</string>
    <string name="createAnketoTitleLabel">タイトル</string>
    <string name="createAnketoDescriptionLabel">アンケート内容</string>
    <string name="createAnketoAnswersLabel">選択肢</string>
    <string name="createAnketoCreateBbutton">アンケート作成</string>
    <string name="createAnketoAddAnswerButton">＋追加</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

</resources>
